# RAWBerry-Cluster

./: .gitignore  Makefile  Readme.md  buffer.c  input.c  main.cpp  testserver
PSNR-calculation/MATLAB/: PSNR.m
PSNR-calculation/MATLAB/in_old/: in_1.dng
PSNR-calculation/Python/: PSNR.py
RAWBerry/: Makefile  RAWBerry  cluster.c  cluster.h  cmake_install.cmake  collector.c  input.c  input.h  main.c  master.c  slave.c  sopool.h
RAWBerry-Client-rtsp-client/: Makefile  README.md  main.cpp  testclient
RAWBerry-Client-rtsp-client/src/: client.cpp  client.hpp
RAWBerry-Client-rtsp-client/test/: Makefile  test.cpp
RAWBerry-Cluster-milestone-2-demo/src/gpr/: CMakeCache.txt  CMakeLists.txt
RAWBerry-Cluster-rtsp_stream/: Makefile  testserver
RAWBerry-Cluster-rtsp_stream/src/: CRtspSession.cpp  CStreamer.cpp  SimStreamer.h
include/: argtable3.h  cluster.h  input.h  sopool.h  util.h
src/: CRtspSession.cpp  CStreamer.cpp  CStreamer.h  SimStreamer.cpp  SimStreamer.h  argtable3.c  cluster.c  collector.c  input.c  main.c  master.c  slave.c
src/Input/: input.c
src/MPI/: cluster.c  collector.c
src/buffer/: buffer.c  buffer.h
src/gpr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/gpr/data/tests/: gpr_tools
src/gpr/data/tests/PPM/: GOPR0024-250x188-8-bit.PPM
src/gpr/source/app/Camera/: README  camera.py  (+2 more)
src/gpr/source/app/pputd/: CMakeLists.txt  main.c
src/main/: Makefile  buffer.h  input.c  main.c  util.h
src/rtsp/: main.cpp  testserver
src/rtsp/src/: CStreamer.cpp  CStreamer.h  SimStreamer.cpp  SimStreamer.h
test/: stubs.c
(+143 files in other folders)
